--- a/requirements.txt
+++ b/requirements.txt
@@ -11,10 +11,12 @@ Brotli==1.0.9
 bs4==0.0.1
 certifi==2021.10.8
 cffi==1.15.0
+chardet==4.0.0
 charset-normalizer==2.0.11
 click==8.0.3
 clusteval==2.1.2
 clustimage==1.4.0
+colorama==0.4.4
 colourmap==0.1.1
 cycler==0.11.0
 Cython==0.29.27
@@ -41,7 +43,7 @@ Flask-Caching==1.10.1
 Flask-Compress==1.10.1
 fonttools==4.29.1
 geobuf==1.1.1
-hdbscan==0.8.27
+hdbscan==0.8.28
 idna==3.3
 ImageHash==4.2.1
 imageio==2.14.1
@@ -50,6 +52,7 @@ ipykernel==6.8.0
 ipython==8.0.1
 ipython-genutils==0.2.0
 ipywidgets==7.6.5
+isort==5.8.0
 itsdangerous==2.0.1
 jedi==0.18.1
 Jinja2==3.0.3
@@ -95,7 +98,6 @@ pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==9.0.1
 pip-tools==6.5.1
-pkg_resources==0.0.0
 platformdirs==2.4.1
 plotly==5.5.0
 prometheus-client==0.13.1
@@ -116,6 +118,7 @@ PyWavelets==1.2.0
 pyzmq==22.3.0
 qtconsole==5.2.2
 QtPy==2.0.1
+redis==3.5.3
 requests==2.27.1
 retrying==1.3.3
 scatterd==0.1.2
