--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ dash-html-components==2.0.0
 dash-leaflet==0.1.23
 dash-mantine-components==0.5.0
 dash-table==5.0.0
+dash-uploader==0.6.0
 debugpy==1.5.1
 decorator==5.1.1
 defusedxml==0.7.1
