--- a/requirements.txt
+++ b/requirements.txt
@@ -38,7 +38,7 @@ distfit==1.4.2
 EditorConfig==0.12.3
 entrypoints==0.4
 executing==0.8.2
-faiss-gpu==1.7.2
+faiss-cpu
 Flask==2.0.2
 Flask-Caching==1.10.1
 Flask-Compress==1.10.1
